--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                                     Je fais en sorte de interconnecter des matériels réseaux : WiFi, commutateurs LAN, routeurs.
                                 </p>
                                 <br>
-                                <p>Protocoles solicité :</p>
+                                <p>Protocoles sollicités :</p>
                                 <br>
                                 <p>DNS, DHCP, HTTP(S), FTP(S), SSH, VLAN, SMTP/IMAP4/POP3, SNMP</p>
                             </div>
@@ -191,7 +191,7 @@
                             </div>
                             <div class="boite">
                                 <i class="fas fa-bug"></i>
-                                <div class="texte">Cybersécuité</div>
+                                <div class="texte">Cybersécurité</div>
                                 <p>
                                     Je sécurise les accès informatiques : pare-feu, authentification, gestions des droits, VLAN, VPN.
                                 </p>
