--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                                     Je sécurise les accès informatiques : pare-feu, authentification, gestions des droits, VLAN, VPN.
                                 </p>
                                  <br>
-                                <p>Outils de cybersécuité :</p>
+                                <p>Outils de cybersécurité :</p>
                                 <br>
                                 <p>Proxy, Firewall, VPN</p>
                             </div>
