--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                         <p>
                             Un <q>drone INSPECTEUR</q> qui se charge de capturer des images fixes ou mobiles
                         </p>
-                        <a href="pttx/Projet-DRONE INSPECTEUR.pptx">Voir le projet</a>
+                        <a href="https://rufismosengo.com/merci.html/pttx/Projet-DRONE INSPECTEUR.pptx">Voir le projet</a>
                     </div>
                 </div>
 
