--- a/index.html
+++ b/index.html
@@ -76,11 +76,9 @@
                 <div class="colone droite">
                     <div class="texte">Je suis Rufis Mosengo. <span>Ravi de vous rencontrer.</span>
                     <p>
-                        Actuellement en 2ème années de DUT Réseaux et Télécoms à l'université Sorbonne Paris-Nord, 
-                        je suis à la recherche d’un stage pour l’obtention de mon diplôme, et par la suite, intégrer une école d'ingénieur de préférence en apprentissage, 
-                        ce qui me permettra de réaliser mon projet professionnel qui est d'être Administrateur Systèmes et Réseaux pouvant évoluer vers le statut de chef de projet au sein d'une TPE/PME.
-
-
+                        Je suis un étudiant de deuxième de DUT Réseaux et Télécommunications, 93430 Villetaneuse. 
+                        Je suis toujours prêt à vivre de nouvelles expériences, rencontrer de nouvelles personnes et apprendre de nouvelles choses. 
+                        Je trouve gratifiant l'idée de créer de la valeur pour les gens et d'avoir un impact sur le monde à travers mon travail.
                     </p>
                     <a href="pdf/CV_Rufis MOSENGO.pdf">Mon CV</a>
                 </div>
