--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="colone droite">
                     <div class="texte">Je suis Rufis Mosengo. <span>Ravi de vous rencontrer.</span>
                     <p>
-                        Je suis un étudiant en deuxième de DUT Réseaux et Télécoms, à l'université Sorbonne Paris-Nord 93430 Villetaneuse. 
+                        Je suis un étudiant en deuxième de DUT Réseaux et Télécoms Télécommunications, à l'université Sorbonne Paris-Nord 93430 Villetaneuse. 
                         Je suis toujours prêt à vivre de nouvelles expériences, rencontrer de nouvelles personnes et apprendre de nouvelles choses. 
                         Je trouve gratifiant l'idée de créer de la valeur pour les gens et d'avoir un impact sur le monde à travers mon travail.
                     </p>
