--- a/index.html
+++ b/index.html
@@ -307,7 +307,8 @@
                 </div>
 
 
-                <div class="carte-deux">
+                <!--
+<div class="carte-deux">
                     <div class="boite">
                         <i class="fab fa-html5"></i>
                         <div class="texte">Site d'annuaire</div>
@@ -327,6 +328,8 @@
                         <a href="pdf/Projet-DRONE INSPECTEUR.pdf">Voir le projet</a>
                     </div>
                 </div>
+Plus tard
+-->
 
 
                </div>
