--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@ Plus tard
     <footer>
 
         <ul class="socials">
-            <li><a href="https://twitter.com/_alpine21_?t=qK3OCy3aASMLXnKGeizmkQ&s=03"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="https://twitter.com/_alpine21_"><i class="fab fa-twitter"></i></a></li>
             <li><a href="https://github.com/alpine21"><i class="fab fa-github"></i></a></li>
             <li><a href="https://www.linkedin.com/in/rufis-mosengo"><i class="fab fa-linkedin"></i></a></li>
         </ul>
