--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                         <div class="texte">Portfolio</div>
                         <p>
                             Un site adéquat et accessible pour l'enrichissement
-                            de l'expérience utilisateur 
+                            de l'expérience utilisateur. 
                         </p>
                         <a href="#">Voir le projet</a>
                     </div>
