--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         Je suis toujours prêt à vivre de nouvelles expériences, rencontrer de nouvelles personnes et apprendre de nouvelles choses. 
                         Je trouve gratifiant l'idée de créer de la valeur pour les gens et d'avoir un impact sur le monde à travers mon travail.
                     </p>
-                    <a href="pdf/CV_Rufis MOSENGO.pdf">Mon CV</a>
+                    <a href="pdf/CV_Rufis_MOSENGO.pdf">Mon CV</a>
                 </div>
             </div>
         </div>
