--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         Je suis toujours prêt à vivre de nouvelles expériences, rencontrer de nouvelles personnes et apprendre de nouvelles choses. 
                         Je trouve gratifiant l'idée de créer de la valeur pour les gens et d'avoir un impact sur le monde à travers mon travail.
                     </p>
-                    <a href="pdf/CV_Rufis-MOSENGO.pdf">Mon CV</a> <!-- A changer souvent-->
+                    <a href="pdf/CV_AP_RufisMOSENGO_ESIPE.pdf">Mon CV</a> <!-- A changer souvent-->
                 </div>
             </div>
         </div>
@@ -141,7 +141,7 @@
                     <div class="barre">
                         <div class="info">
                             <i class="fas fa-terminal"></i>
-                            <span>Programmation réseaux</span>
+                            <span>POO</span>
                             <span>20%</span>
                         </div>
                         <div class="ligne prog-reseaux"></div>
@@ -151,7 +151,7 @@
                     <div class="barre">
                         <div class="info">
                             <i class="fas fa-bug"></i>
-                            <span>Cybersécurité</span>
+                            <span>Sécurité</span>
                             <span>10%</span>
                         </div>
                     <div class="ligne cyber"></div>
@@ -173,12 +173,12 @@
                                 <i class="fas fa-server"></i>
                                 <div class="texte">Réseaux</div>
                                 <p>
-                                    Je fais en sorte de interconnecter des matériels réseaux : WiFi, commutateurs LAN, routeurs.
+                                    Je fais en sorte de interconnecter des matériels réseaux : LAN, Switchs, Routeurs, Fibre optique.
                                 </p>
                                 <br>
                                 <p>Protocoles sollicités :</p>
                                 <br>
-                                <p>DNS, DHCP, HTTP(S), FTP(S), SSH, VLAN, SMTP/IMAP4/POP3, SNMP</p>
+                                <p>OSI & TCP/IP, MPLS, BGP, DNS, DHCP, SMTP, SNMP</p>
                             </div>
                         </div>
 
@@ -191,12 +191,12 @@
                                 <i class="fas fa-bug"></i>
                                 <div class="texte">Cybersécurité</div>
                                 <p>
-                                    Je sécurise les accès informatiques : pare-feu, authentification, gestions des droits, VLAN, VPN.
+                                    Je sécurise les accès informatiques : Firewall, authentification, gestions des droits, VLAN.
                                 </p>
                                  <br>
                                 <p>Outils de cybersécurité :</p>
                                 <br>
-                                <p>Proxy, Firewall, VPN</p>
+                                <p>Nmap, Scapy, Architectures (Bastion, T, Cascade)</p>
                             </div>
                         </div>
                     
@@ -215,7 +215,7 @@
                                 <br>
                                 <p>Outils de télécommunication :</p>
                                 <br>
-                                <p>FTTH, xDSL, FTTx, WiMAX, fibre optique</p>
+                                <p>ADSL, Téléphonie (IP, Analogique, Numérique), PABX/IPBX, Fibre optique</p>
                             </div>
                         </div>
 
@@ -227,13 +227,13 @@
                                 <i class="fa-solid fa-file-code"></i>
                                 <div class="texte">Programmes</div>
                                 <p>
-                                   Je programme des applications web dynamiques (HTML, CSS, Javascript, SQL, PHP, cookie, session), 
-                                   avec quelques connaissances en sécurité, sur différents supports (PC, tablette, smartphone).
+                                   Je programme des applications web dynamiques, 
+                                   avec quelques connaissances en sécurité, sur différents supports.
                                 </p>
                                 <br>
                                 <p>Langues parlées :</p>
                                 <br>
-                                <p>Python, Script Bash, HTML & CSS, PHP, PostgreSQL</p>
+                                <p>Python, Shell, HTML & CSS, PHP, PostgreSQL (Linux)</p>
                             </div>
                         </div>
 
@@ -246,12 +246,12 @@
                                 <i class="fa-solid fa-desktop"></i>
                                 <div class="texte">Système</div>
                                  <p>
-                                    Je maintiens, administre et supervise des systèmes Linux (postes clients, serveurs).
+                                    Je maintiens, administre et supervise des systèmes Linux.
                                 </p>
                                 <br>
                                 <p>Système d'exploitation :</p>
                                 <br>
-                                <p>Linux (Debian/Ubuntu)</p>
+                                <p>Linux (Debian/Ubuntu/Mageia 4)</p>
                             </div>
                         </div>
 
@@ -265,7 +265,7 @@
                                 <div class="texte">Logiciels</div>
                                     <p>
                                         Je mets en place des services virtualisés pour la mutualisation de ressources
-                                         (supervision dédiée aux réseaux, service de messagerie, etc.) à travers des logiciels, applications, etc.
+                                        à travers des logiciels, applications, etc.
                                     </p>
                                      <br>
                                     <p>Outils de logiciel :</p>
@@ -274,9 +274,6 @@
                                 </div>
                             </div>
                         </div>
-                        <!--
-                        <button class="read-more-btn">Voir plus</button>
-                        -->
                         
 
                 </div>
@@ -305,31 +302,6 @@
                         <a href="#">Voir le projet</a>
                     </div>
                 </div>
-
-
-                <!--
-<div class="carte-deux">
-                    <div class="boite">
-                        <i class="fab fa-html5"></i>
-                        <div class="texte">Site d'annuaire</div>
-                        <p>Un mini site web d’annuaire permettant à des utilisateurs de gérer leurs contacts</p>
-                        <a>En cours</a>
-                    </div>
-                </div>
-
-
-                <div class="carte-trois">
-                    <div class="boite">
-                        <i class="fa-solid fa-rocket"></i>
-                        <div class="texte">Drone</div>
-                        <p>
-                            Un <q>drone INSPECTEUR</q> qui se charge de capturer des images fixes ou mobiles
-                        </p>
-                        <a href="pdf/Projet-DRONE INSPECTEUR.pdf">Voir le projet</a>
-                    </div>
-                </div>
-Plus tard
--->
 
 
                </div>
@@ -388,16 +360,6 @@ Plus tard
             <li><a href="https://github.com/alpine21"><i class="fab fa-github"></i></a></li>
             <li><a href="https://www.linkedin.com/in/rufis-mosengo"><i class="fab fa-linkedin"></i></a></li>
         </ul>
-
-        <!--
-        <ul class="menu">
-            <li><a href="#home" class="menu-btn">Acceuil</a></li>
-            <li><a href="#me" class="menu-btn">A propos de moi</a></li>
-            <li><a href="#skills" class="menu-btn">Compétances</a></li>
-            <li><a href="#projets" class="menu-btn">Projets</a></li>
-            <li><a href="#contact" class="menu-btn">Contact</a></li>
-        </ul>  
-        -->
 
         <p><i class="far fa-copyright"></i> 2022 <a href="#">Rufis Mosengo</a> | Alls Rights Reserved</p>
 
