--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                             </div>
                             <div class="boite">
                                 <i class="fas fa-bug"></i>
-                                <div class="texte">Cybersécurité</div>
+                                <div class="texte">Sécurité</div>
                                 <p>
                                     Je sécurise les accès informatiques : Firewall, authentification, gestions des droits, VLAN.
                                 </p>
