--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Rufis Mosengo</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -361,7 +361,7 @@
             <li><a href="https://www.linkedin.com/in/rufis-mosengo"><i class="fab fa-linkedin"></i></a></li>
         </ul>
 
-        <p><i class="far fa-copyright"></i> 2022 <a href="#">Rufis Mosengo</a> | Alls Rights Reserved</p>
+        <p><i class="far fa-copyright"></i> 2022 <a href="#">Rufis Mosengo</a> | Tous Droits Réservés</p>
 
 
     </footer>
