--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <div class="barre">
                         <div class="info">
                             <i class="fab fa-html5"></i>
-                            <span>Programmation web</span>
+                            <span>Développement Web</span>
                             <span>40%</span>
                         </div>
                         <div class="ligne prog-web"></div>
