--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                                    avec quelques connaissances en sécurité, sur différents supports.
                                 </p>
                                 <br>
-                                <p>Langues parlées :</p>
+                                <p>Langages utlisés :</p>
                                 <br>
                                 <p>Python, Shell, HTML & CSS, PHP, PostgreSQL (Linux)</p>
                             </div>
