--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rufis Mosengo</title>
+    <meta name="author" content="Rufis Mosengo" />
+    <meta name="description" content="Un site Web adéquat et accessible qui utilise l'HTML, le CSS, le JavaScript, 
+                                      [formsubmit] pour enrichir l'expérience utlisateur." />
+    <meta name="keywords" content="Développement Web, Programmation Web, HTML, HTML5, CSS, CSS3, JavaScript, formsubmit, DUT
+R&amp;T, Université Sorbonne Paris Nord, IUT de Villetaneuse" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
