--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
                       <p>
                         J'interconnecte du matériel réseaux et de télécommunication afin de comprendre les transmissions : LANs, Routeurs/Switchs, PABX/IPBX, ADSL, Fibre Optique.
                       </p>
-                      <img src="imgs/work/network/network-1.PNG" alt="network-1">
+                      <img src="imgs/work/network/network-1.png" alt="network-1">
                       <img src="imgs/work/network/network-2.png" alt="network-2">
-                      <img src="imgs/work/network/network-3.PNG" alt="network-3">
+                      <img src="imgs/work/network/network-3.png" alt="network-3">
                     </div>
                     <div class="popup-footer"></div>
                     <button id="button-close-1">Fermez</button>
