--- a/index.html
+++ b/index.html
@@ -244,12 +244,12 @@
                 <ul>
                   <li>
                     <div class="timeline-content">
-                      <h3 class="date">26/09/2022 - 19/09/2025</h3>
+                      <h3 class="date">09/2022 - 09/2025</h3>
                       <h1 class="color">... Apprenti ...</h1>
                       <h1 class="color"><a href="#">None</a></h1>
                       <h1>Apprentisage</h1>
                       <p>
-                        J'espère être Apprenti Ingénieur Administrateur systèmes et réseaux ...
+                        Je recherche une alternance en tant que Ingénieur Administrateur systèmes et réseaux de préférence. Mais je suis ouvert à toutes opportunités.
                       </p>
                     </div>
                   </li>
@@ -260,7 +260,7 @@
                       <h1 class="color"><a href="https://www.cfigroupe.com/">CFI Gropue</a></h1>
                       <h1>Stage</h1>
                       <p>
-                        Je suis stagiaire chez la CFI pendant une durée de 12 semaines, oû je suis amené à créer une console MDM.
+                        Je suis stagiaire chez la CFI pendant une durée de 12 semaines, où je vais devoir créer une console MDM.
                       </p>
                     </div>
                   </li>
@@ -282,7 +282,7 @@
                       <h1><a href="https://esipe.univ-gustave-eiffel.fr/" class="color">ESIPE</a></h1>
                       <h1>Apprenti Ingénieur Informatique Option Réseau</h1>
                       <p>
-                        Je serais un Apprenti Ingénieur Informatique pendant une durée de 3 ans, oû je me spécialiserais en Réseau à partir de la deuxième année.
+                        Je vais être Apprenti Ingénieur Informatique pendant une durée de 3 ans à ESIPE, où je me spécialiserais en Réseau à partir de la deuxième année.
                       </p>
                     </div>
                   </li>
@@ -292,7 +292,7 @@
                       <h1><a href="https://iutv.univ-paris13.fr/" class="color">IUT Villetaneuse</a></h1>
                       <h1>DUT R&T</h1>
                       <p>
-                        J'effectue un DUT R&T pendant une durée de 2 ans. Je serais diplômé après avoir effctuer mon stage chez la CFI.
+                        J'effectue un DUT R&T pendant une durée de 2 ans à L'IUT de Villetaneuse, j'obtiendrais mon diplôme après avoir effectué mon stage chez la CFI et passer ma soutenance de stage.
                       </p>
                     </div>
                   </li>
@@ -302,7 +302,7 @@
                       <h1><a href="https://www.lycee-dorian.fr/" class="color">Lycée et CFA Dorian</a></h1>
                       <h1>BAC STI2D (SIN)</h1>
                       <p>
-                        J'ai effectué un BAC STI2D Option SIN au Lycée et CFA Dorian à Paris 11 pendant une durée de 2 ans. J'ai obtenu le diplôme en Juin 2020.
+                        J'ai effectué un BAC STI2D option SIN pendant une durée de 2 ans au lycée et CFA Dorian, où j'ai obtenu mon diplôme en Juin 2020.
                       </p>
                     </div>
                   </li>
