--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="shortcut icon" type="image/png" href="imgs/favicon/favicon.png">
     <title>Rufis Mosengo | Portfolio </title>
     <meta name="author" content="Rufis Mosengo"/>
     <meta name="description" content="Site officiel : Rufis Mosengo">
