--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                 <ul>
                   <li>
                     <div class="timeline-content">
-                      <h3 class="date">26/09/2022 - 19/09/2025</h3>
+                      <h3 class="date">09/2022 - 09/2025</h3>
                       <h1 class="color">... Apprenti ...</h1>
                       <h1 class="color"><a href="#">None</a></h1>
                       <h1>Apprentisage</h1>
@@ -283,7 +283,7 @@
                       <h1><a href="https://esipe.univ-gustave-eiffel.fr/" class="color">ESIPE</a></h1>
                       <h1>Apprenti Ingénieur Informatique Option Réseau</h1>
                       <p>
-                        Je serais un Apprenti Ingénieur Informatique pendant une durée de 3 ans, oû je me spécialiserais en Réseau à partir de la deuxième année.
+                        Je serais un Apprenti Ingénieur Informatique pendant une durée de 3 ans.
                       </p>
                     </div>
                   </li>
