--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="home-content">
           <p class="text-1">Salut, mon nom est </p>
           <p class="text-2">Rufis Mosengo</p>
-          <p class="text-3">Et je souhaite devenir <span class="text-home"></span> </p>
+          <p class="text-3">Et je suis en <span class="text-home"></span> </p>
         </div>
       </div>
     </section>
